WDSUS-45 - fix mobile navigation layout issue

--- a/assets/scss/blocks/core/_navigation.scss
+++ b/assets/scss/blocks/core/_navigation.scss
@@ -6,6 +6,7 @@
 .wp-block-navigation__responsive-container.is-menu-open {
 	padding-left: var( --wp--preset--spacing--50 ) !important;
 	padding-right: var( --wp--preset--spacing--50 ) !important;
+	width: 100%;
 }
 
 /* Submenu
@@ -27,6 +28,17 @@
 	.wp-block-navigation__submenu-container {
 	padding-left: var( --wp--preset--spacing--20 ) !important;
 	padding-right: var( --wp--preset--spacing--20 ) !important;
+}
+
+/* Media Queries
+---------------------------------------------------------------------------- */
+
+@media only screen and ( max-width: 600px ) {
+	.wp-block-navigation__container.is-responsive.items-justified-right.wp-block-navigation {
+		--navigation-layout-justification-setting: flex-start;
+		--navigation-layout-justify: flex-start;
+		width: 100%;
+	}
 }
 
 /* stylelint-enable selector-class-pattern, declaration-no-important, value-keyword-case */
